[gd_scene load_steps=3 format=3 uid="uid://i38gtgp55q0g"]

[ext_resource type="Theme" uid="uid://codxo4j8fmbmi" path="res://resources/uis/theme_button_blue.tres" id="1_elibn"]
[ext_resource type="Script" path="res://scripts/main_menu/main_screen.gd" id="1_l44md"]

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l44md")

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/italics_font_size = 96
bbcode_enabled = true
text = "[center][wave amp=50 freq=2][i] Zombie Hunter [/i][/wave][/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="MainButtons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="MainButtons"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="StartButton" type="Button" parent="MainButtons/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme = ExtResource("1_elibn")
text = "Start"

[node name="OptionsButton" type="Button" parent="MainButtons/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme = ExtResource("1_elibn")
text = "Options"

[node name="QuitButton" type="Button" parent="MainButtons/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme = ExtResource("1_elibn")
text = "Quit"

[connection signal="pressed" from="MainButtons/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainButtons/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
